library/pod-security-policy/allowed-add-capabilities/example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-allowed-add-capabilities
  labels:
    app: nginx-allowed-add-capabilities
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: false
